# data-science

./: .flake8  Makefile  README.md  pyproject.toml
.codesandbox/: Dockerfile  tasks.json
.github/workflows/: test.yml
docs/: README.md
infra/: Makefile  README.md  skaffold.yml
infra/db/: .gitignore  sqitch.conf
infra/k8s/: kustomization.yml
infra/k8s/mageai/: kustomization.yml  mageai.yml
infra/k8s/postgres/: kustomization.yml  postgres.yml
infra/k8s/superset/: superset.yml
notebooks/: onkia.ipynb  train_test_split.ipynb
notebooks/examples/: train_test_split.ipynb
src/jobbot/: Makefile  catalog.yml  jobbot_cli.py
src/jobbot/jobbot/scraper/: __init__.py  items.py  jobbot_scraper.py  jobbot_spider.py
src/jobbot/jobbot/spiders/: minnesota_works_spider.py
src/pyra/: README.md  pyproject.toml
src/vorpa/: .gitkeep
