[tool.poetry]
name = "aprovan_data_science"
description = "Core data science repository"
authors = []
version = "0.1.0"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
awswrangler = '~3.1'
pandas = ">1.5.0,<3.0.0"
numpy = ">=1.18"
seaborn = ">=0.11.2,<0.12"
matplotlib = ">=3.4.3,<4"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
black = {version = "^23.3", allow-prereleases = true}
